--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -34,6 +34,12 @@
       "title": "Open in SharePoint",
       "environments": ["preview","live"],
       "event": "openInSharepoint"
+    },
+    {
+      "id": "downloadPdf",
+      "title": "Download PDF",
+      "environments": ["dev","edit","preview","live"],
+      "event": "downloadPdf"
     }
   ]
 }
